jEdit 5.7 version history
       (changes since jEdit 5.6.0)
:encoding=UTF-8:

{{{ Version 5.7pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova for contributing to this release.

{{{ Bug Fixes

- VFSManager.canReadFile() was returning true only for directories (#4102 - Matthieu Casanova)

}}}
{{{ Miscellaneous

- Status bar design updated with the ability to add widgets to the left and the right of the bar (Matthieu Casanova)

}}}
{{{ API Changes

- New methods BufferSet.contains()
    StandardUtilities.objectsEqual()
    TextArea.showPopupMenu()
    Mode.acceptFilename()
    OperatingSystem.isDOSDerived()
    OperatingSystem.hasJava17()
    MiscUtilities.getFileNameNoExtension()
    GUIUtilities.prettifyMenuLabel()
    GUIUtilities.setAutoMnemonic()
    GUIUtilities.parseColor()
    GUIUtilities.parseStyle()
    GUIUtilities.adjustForScreenBounds()
    GUIUtilities.requestFocus()
    GUIUtilities.isPopupTrigger()
    GUIUtilities.isMiddleButton()
    GUIUtilities.isRightButton()
    GUIUtilities.getScreenBounds()
    GUIUtilities.showPopupMenu()
    GUIUtilities.showPopupMenu()
    GUIUtilities.isAncestorOf()
    GUIUtilities.getParentDialog()
    GUIUtilities.setEnabledRecursively()
    GUIUtilities.setButtonContentMargin()
    GUIUtilities.makeSameSize()
    GUIUtilities.defaultTableCellSize()
    GUIUtilities.defaultColumnWidth()
    GUIUtilities.defaultRowHeight()
    Buffer.getFile()
    VFSManager.runInAWTThread()
    VFSManager.runInWorkThread() (Matthieu Casanova)

}}}
{{{ Editing


}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: